--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <div class="container">
     <h2>Submit Anonymous Feedback</h2>
-    <form method="POST" action="https://formspree.io/f/mnqyvrzx">
+    <form method="POST" action="https://formspree.io/f/meozkarb">
       <label for="message">Your Message:</label><br>
       <textarea name="message" id="message" required></textarea><br>
       <button type="submit">Send Feedback</button>
