--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   <div class="container">
     <h2>Submit Anonymous Feedback</h2>
     <form method="POST" action="https://formspree.io/f/xeozkand">
-      <label for="message">Your Message:</label><br>
-      <textarea name="message" id="message" required></textarea><br>
+      <label for="message">Your Message:</label>
+      <textarea name="message" id="message" required></textarea>
       <button type="submit">Send Feedback</button>
     </form>
   </div>
